# library-mind

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
app/: __init__.py  __main__.py  main.py
app/api/: __init__.py  dependencies.py  middleware.py
app/api/routers/: __init__.py  chat.py  classify.py  health.py  search.py  summarise.py
app/core/: __init__.py  exceptions.py  logging.py  settings.py
app/data/: __init__.py  books.json
app/infrastructure/: __init__.py  cache.py  keys.py  rate_limiter.py  usage_tracker.py  vector_store.py
app/prompts/: __init__.py  chatbot.py  classifier.py  rag.py  summariser.py
app/providers/: __init__.py  amaliai_provider.py  anthropic_provider.py  base.py  openai_provider.py  resilient.py  retry.py  tokens.py
app/schemas/: __init__.py  chat.py  classification.py  errors.py  health.py  search.py  summarisation.py
app/services/: __init__.py  chatbot.py  classifier.py  embedding.py  json_utils.py  rag.py  summariser.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  CI.md  ERD.md  PRD.md  REFLECTION.md
docs/diagrams/: architecture.mmd  sequence.mmd
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/ask/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/classify/: page.tsx
frontend/src/app/health/: page.tsx
frontend/src/app/search/: page.tsx
frontend/src/app/summarise/: page.tsx
frontend/src/components/layout/: app-shell.tsx  health-pill.tsx  logo.tsx  sidebar-nav.tsx  theme-toggle.tsx
frontend/src/components/shared/: sources.tsx
frontend/src/components/ui/: alert.tsx  badge.tsx  button.tsx  card.tsx  empty-state.tsx  input.tsx  page-header.tsx  score-bar.tsx  spinner.tsx
frontend/src/lib/: api.ts  conversations.ts  hooks.ts  nav.ts  schemas.ts  utils.ts
scripts/: __init__.py  check_amaliai.py  seed_vector_store.py  smoke_test.py
tests/: conftest.py
tests/api/: __init__.py  test_chat.py  test_classify.py  test_health.py  test_search.py  test_summarise.py  test_validation.py
tests/infrastructure/: __init__.py  test_cache.py  test_keys.py  test_rate_limiter.py  test_usage_tracker.py  test_vector_store.py
tests/prompts/: test_chatbot_prompt.py  test_classifier_prompt.py  test_rag_prompt.py  test_summariser_prompt.py
tests/providers/: __init__.py  test_amaliai_provider.py  test_anthropic_provider.py  test_base.py  test_openai_provider.py  test_resilient.py  test_retry.py
tests/scripts/: test_seed_vector_store.py
tests/services/: test_chatbot.py  test_classifier.py  test_embedding.py  test_json_utils.py  test_rag.py  test_summariser.py
